Adding node file

--- a/NodeJS/server/architecture/index.html
+++ b/NodeJS/server/architecture/index.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web server using node</title>
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <h1>Web server using node.js</h1>
-    <p>Client-server architecture.</p>
+    <div class="card-container">
+      <div class="card">
+        <div class="profile-image">
+          <img
+            src="./assets/mac-os-x-os-x-big-sur-hd-wallpaper-863ba887a4a08dd3896af12ae4bd7792.jpg"
+            alt="image"
+          />
+        </div>
+      </div>
+    </div>
   </body>
 </html>
