--- a/Introduction to Backend/Class-01/pages/index.html
+++ b/Introduction to Backend/Class-01/pages/index.html
@@ -7,5 +7,11 @@
   </head>
   <body>
     <h1>This is Index Page</h1>
+    <a href="http://localhost:3000/about">Go to about page</a>
+    <br />
+    <a href="http://localhost:3000/contact">Go to contact page</a>
+    <br />
+    <a href="http://localhost:3000/confirm">Go to confirmation page</a>
+    <br />
   </body>
 </html>
